# SlapperDrone

./: README.md  cyberzoo_branch_cylinder_params.yaml
slapper_control/: CMakeLists.txt  package.xml
slapper_control/cfg/: pid_controller.cfg
slapper_control/include/control_test/: DoublePublisherSingleSubscriber.hpp  PositionPublisherSubscriber.h  PublisherSubscriber.h
slapper_control/launch/: approach_perch.launch  planning_box.launch  random_setpoint.launch  track_cylinder.launch
slapper_control/src/: approach_perch.cpp  body_frame_transform.cpp  gazebo_mocap_odom.cpp  gazebo_odom_remap.cpp  local_position_controller.cpp  offboard_takeoff.cpp  pid_controller.cpp  planning_box.cpp  random_setpoint.cpp  track_cylinder.cpp
slapper_vision/: CMakeLists.txt  nodelet_plugins.xml  package.xml
slapper_vision/cfg/: cluster_cylinder_detector.cfg  coefficient_cylinder_detector.cfg  cylinder_detector.cfg
slapper_vision/include/ransac_test/: TriplePublisherSingleSubscriber.h  line_segment_detector_test.h
slapper_vision/launch/: bag_cylinder_detect.launch  rs_post_processing.launch
slapper_vision/msg/: Perch.msg
slapper_vision/rviz/: ransac_line_segment_detector.rviz
slapper_vision/src/: cylinder_detector.cpp
